--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <input type="text" placeholder="city" id="city"><br>
         <input type="text" placeholder="State " id="state">
         <br>
-       <button onclick="addData()" class="button">Add message</button>
+       <button onclick="addData()" class="button">Add Details</button>
        </div>
      
     </div>
